<resources>
    <string name="app_name">Github User App</string>
    <string name="followers">Follower</string>
    <string name="following">Following</string>
    <string name="about_me">About Me</string>
    <string name="searchbar_hint">Cari Apa?</string>
    <string name="username">Username</string>
    <string name="name">Nama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="error_failed_to_load_data">Error: Failed to load data.</string>
    <string name="favorite_bar">Favorite</string>
    <string name="setting">setting</string>
    <string name="favorite_list">Favorite</string>
    <string name="username_favorite">Username</string>
</resources>