<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUser">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tvProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvProfilePicture"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/followers"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tvProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/following"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tvFollower"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfilePicture" />

    <!-- Tabs Layout & ViewPager -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:contentDescription="@string/hello_blank_fragment"
        app:tabSelectedTextColor="@color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressbar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/tvFollower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@+id/tvProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintVertical_bias="0.448" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>
